syntax = "proto3";

option java_outer_classname = "ActivityEvents";
option java_multiple_files = true;

package activityevents;

// The Activity Events service definition
service ActivityEvents {

  // A simple RPC.
  //
  // Create a new event of a given deployment.
  rpc CreateEvent(EventRequest) returns (EventResponse) {}

  // A server-to-client streaming RPC.
  // Obtains the Events available within the given Deployment.
  // Results are streamed rather than returned at once
  rpc ListEvents(Deployment) returns (stream EventRequest) {}
}

message Deployment {
  int32 id = 1;
}

message EventRequest {
  int32 id = 1;
  string message = 2;
  Timestamp timestamp = 3;
  int32 deployment_id = 4;
}

message Timestamp {
  // Will hold time when client send data (for calculations)
  int64 send = 1;
  // Will hold time when server received data (for calculations)
  int64 receive = 2;
}

message EventResponse {
  int32 id = 1;
  bool success = 2;
  // 
  int64 execution_time = 3;
}